--- a/Part4/Ex.2
+++ b/Part4/Ex.2
@@ -5,139 +5,168 @@
 
 #define MAX_STACK_SIZE 100
 
-typedef int element;
-element data[MAX_STACK_SIZE];
+// ----- 스택 관련 전역 -----
+// element 타입을 char로 변경했습니다. 연산자('+', '*', '(' 등)는 문자이므로
+// char 타입으로 저장하는 것이 더 명확합니다.
+typedef char element; 
+element stack[MAX_STACK_SIZE];
 int top;
 
-// 스택을 처음 상태로 만들어주는 함수 (초기화)
-void init_stack() {
-    // top은 스택의 가장 꼭대기를 가리키는 위치인데, -1은 '아무것도 없음'을 의미해요.
-    top = -1;
+// ----- 스택 관련 함수들 -----
+void init_stack()
+{
+    top = -1; // 스택 초기화
 }
-
-// 스택이 비어있는지 확인하는 함수
-int is_empty() {
-    // top이 -1이면 데이터가 하나도 없는 것이므로, '비어있다'는 의미로 참(1)을 반환해요.
+int is_empty()
+{
     return (top == -1);
 }
-
-// 스택이 꽉 찼는지 확인하는 함수
-int is_full() {
-    // top이 스택의 마지막 칸(MAX_STACK_SIZE - 1)에 도달했다면, '가득 찼다'는 의미로 참(1)을 반환해요.
+int is_full()
+{
     return (top == MAX_STACK_SIZE - 1);
 }
-
-// 스택에 데이터가 몇 개 들어있는지 알려주는 함수
-int size() {
-    // top은 0부터 시작하는 위치(인덱스)라서, 개수는 항상 top + 1 이 돼요.
+int size()
+{
     return top + 1;
 }
-
-// 스택에 데이터를 하나 넣는(push) 함수
 void push(element item)
 {
-    // 만약 스택이 가득 찼다면, 더 이상 넣을 공간이 없으므로 아무것도 하지 않고 함수를 끝내요.
-    if (is_full())
-        return;
-
-    // '++top'은 top의 위치를 먼저 1 증가시킨다는 뜻이에요.
-    // 예를 들어 top이 -1이었다면 0으로 만들고, 그 0번째 칸에 item을 저장해요.
-    data[++top] = item;
+    if (!is_full())
+        stack[++top] = item;
 }
-
-// 스택에서 데이터를 하나 꺼내는(pop) 함수
 element pop()
 {
-    // 만약 스택이 비어있다면, 꺼낼 데이터가 없으므로 -1(오류 표시)을 반환하고 함수를 끝내요.
     if (is_empty())
-        return -1;
-
-    // 'top--'는 현재 top 위치의 데이터를 먼저 꺼내고(반환하고), 그 다음에 top 위치를 1 감소시킨다는 뜻이에요.
-    // 이렇게 하면 맨 위 데이터가 사라지는 효과가 나요.
-    return data[top--];
+        return -1; // 언더플로우 방지
+    return stack[top--];
 }
-
-// 스택의 맨 위 데이터를 삭제하지 않고 살짝 엿보는(peek) 함수
 element peek()
 {
-    // 만약 스택이 비어있다면, 볼 데이터가 없으므로 -1(오류 표시)을 반환하고 함수를 끝내요.
     if (is_empty())
         return -1;
-
-    // pop과 다르게 top의 위치를 바꾸지 않고, 그냥 맨 위 데이터를 보여주기만 해요.
-    return data[top];
+    return stack[top];
 }
 
-// 후위 표기법으로 된 수식(exp)을 계산하는 함수
-int eval(char exp[])
+// ----- 연산자 우선순위 함수 -----
+// 각 연산자에 대한 우선순위(계산 순서)를 숫자로 정해주는 함수입니다.
+// 숫자가 높을수록 우선순위가 높습니다.
+int prec(char op)
 {
-    // 연산할 때 사용할 왼쪽 숫자(피연산자)와 오른쪽 숫자를 저장할 변수예요.
-    int left_operand, right_operand;
+    // FILL the code
+    switch (op) {
+        // 괄호는 계산 우선순위가 가장 낮지만, 다른 연산자들의 순서를 정하는 데 사용됩니다.
+        case '(': case ')': 
+            return 0;
+        // 덧셈과 뺄셈은 우선순위가 같습니다.
+        case '+': case '-': 
+            return 1;
+        // 곱셈과 나눗셈은 덧셈/뺄셈보다 우선순위가 높습니다.
+        case '*': case '/': 
+            return 2;
+    }
+    // op가 연산자가 아닌 경우 -1을 반환합니다.
+    return -1;
+}
 
-    // 계산을 시작하기 전에 스택을 깨끗하게 비워요.
+// ----- 중위 -> 후위 변환 함수 -----
+// 우리가 흔히 쓰는 '1 + 2' 같은 식(중위 표기식)을
+// 컴퓨터가 계산하기 편한 '1 2 +' 형태(후위 표기식)로 바꿔주는 함수입니다.
+void infix_to_postfix(char infix_expr[], char postfix_expr[])
+{
+    // FILL the code
+    char ch, top_op;
+    
+    // strtok 함수는 '8 / 2 - 3' 같은 식을 공백 기준으로 '8', '/', '2', '-', '3' 처럼 잘라줍니다.
+    // 이렇게 잘린 하나하나를 '토큰(token)'이라고 부릅니다.
+    char *token = strtok(infix_expr, " \n\t");
+
+    // 더 이상 자를 토큰이 없을 때까지 반복합니다.
+    while (token != NULL) {
+        ch = token[0]; // 현재 토큰의 첫 글자를 ch에 저장합니다. (예: '8', '/', '(' 등)
+        
+        // 1. 토큰이 숫자인 경우 (피연산자)
+        if (isdigit(ch)) {
+            // 숫자는 순서가 바뀌지 않으므로 바로 결과(postfix_expr)에 추가합니다.
+            strcat(postfix_expr, token);
+            // 다음 토큰과 구분을 위해 뒤에 띄어쓰기를 추가합니다.
+            strcat(postfix_expr, " ");
+        }
+        // 2. 토큰이 왼쪽 괄호 '(' 인 경우
+        else if (ch == '(') {
+            // 왼쪽 괄호는 나중에 오른쪽 괄호를 만날 때까지 연산자들을 담아두는 역할을 합니다.
+            // 일단 스택에 넣어둡니다.
+            push(ch);
+        }
+        // 3. 토큰이 오른쪽 괄호 ')' 인 경우
+        else if (ch == ')') {
+            // 스택에서 연산자를 하나 꺼냅니다.
+            top_op = pop();
+            // 스택에서 꺼낸 연산자가 왼쪽 괄호 '(' 가 아닐 동안 반복합니다.
+            while (top_op != '(') {
+                // 괄호 안에 있던 연산자들을 모두 결과에 추가합니다.
+                // strlen(postfix_expr)는 현재 결과 문자열의 길이를 알려줍니다.
+                // 즉, 문자열의 맨 끝에 문자를 추가하는 것입니다.
+                postfix_expr[strlen(postfix_expr)] = top_op;
+                strcat(postfix_expr, " "); // 띄어쓰기 추가
+                // 다시 스택에서 다음 연산자를 꺼냅니다.
+                top_op = pop();
+            }
+            // while문이 끝나면 '('를 찾았다는 뜻이므로, 괄호 안의 연산자 정리가 끝난 것입니다.
+        }
+        // 4. 토큰이 그 외의 연산자(+, -, *, /)인 경우
+        else {
+            // 스택이 비어있지 않고, "스택 맨 위의 연산자"가 "현재 연산자"보다 우선순위가 높거나 같으면
+            // 스택의 연산자를 먼저 계산해야 합니다.
+            while (!is_empty() && (prec(ch) <= prec(peek()))) {
+                // 스택 맨 위의 연산자를 꺼내서 결과에 추가합니다.
+                 postfix_expr[strlen(postfix_expr)] = pop();
+                 strcat(postfix_expr, " ");
+            }
+            // 이제 현재 연산자를 스택에 넣습니다.
+            push(ch);
+        }
+        // 다음 토큰을 잘라옵니다.
+        token = strtok(NULL, " \n\t");
+    }
+
+    // 5. 입력식을 모두 처리한 후, 스택에 연산자가 남아있다면
+    // 모두 꺼내서 결과에 추가합니다.
+    while (!is_empty()) {
+        postfix_expr[strlen(postfix_expr)] = pop();
+        strcat(postfix_expr, " ");
+    }
+    
+    // 위 과정에서 마지막에 불필요한 공백이 하나 추가되므로, 그것을 제거합니다.
+    if (strlen(postfix_expr) > 0) {
+        postfix_expr[strlen(postfix_expr) - 1] = '\0'; // '\0'은 문자열의 끝을 의미합니다.
+    }
+}
+
+
+// ----- 메인 함수 -----
+// 표준 입력에서 중위식을 받아 후위식으로 변환 후 출력
+int main()
+{
+    int i = 0;
+    char input_char = 0;
+    char infix_expr[1000] = {0};
+    char postfix_expr[1000] = {0};
+
+    // 표준 입력으로 중위 표기식 읽기
+    // 엔터키(EOF)가 입력될 때까지 한 글자씩 읽어들입니다.
+    while ((input_char = getchar()) != EOF && input_char != '\n') {
+        infix_expr[i++] = input_char;
+    }
+    infix_expr[i] = '\0';
+
+    // 스택을 사용하기 전에 항상 초기화를 해줍니다.
     init_stack();
 
-    // strtok 함수는 긴 문자열(exp)을 공백(" ")을 기준으로 잘라주는 역할을 해요.
-    // for 반복문은 잘라낸 조각(token)이 없을 때까지 계속 실행돼요.
-    // char *token은 잘라낸 문자 조각(예: "10", "+", "5")을 임시로 저장하는 변수예요.
-    for (char *token = strtok(exp, " "); token != NULL; token = strtok(NULL, " ")) {
+    // 중위 표기식을 후위 표기식으로 변환하는 함수를 호출합니다.
+    infix_to_postfix(infix_expr, postfix_expr);
 
-        // isdigit(token[0])는 토큰의 첫 글자가 숫자인지 확인하는 거예요.
-        if (isdigit(token[0])) {
-            // 토큰이 숫자이면, atoi 함수를 사용해 문자열을 진짜 정수로 바꿔서 스택에 넣어요.
-            // 예를 들어 "10" 이라는 글자를 10 이라는 숫자로 바꿔줘요.
-            push(atoi(token));
-        }
-        else // 토큰이 숫자가 아니고 연산자(+, -, *, /)인 경우
-        {
-            // 연산 결과를 저장할 변수예요.
-            int result;
-            // 토큰(예: "+")에서 첫 번째 글자인 연산자를 op 변수에 저장해요.
-            char op = token[0];
-
-            // 연산자는 숫자 2개가 필요하니까, 스택에서 숫자 2개를 꺼내요.
-            // 중요! 스택에서는 나중에 넣은 게 먼저 나오므로, 오른쪽 숫자를 먼저 꺼내야 해요.
-            right_operand = pop();
-            left_operand = pop();
-
-            // switch는 op 변수에 들어있는 연산자에 따라 알맞은 계산을 해요.
-            switch (op) {
-            case '+': // op가 '+' 이면 덧셈을 해요.
-                result = left_operand + right_operand;
-                break; // 계산이 끝났으면 switch 문을 빠져나가요.
-            case '-': // op가 '-' 이면 뺄셈을 해요.
-                result = left_operand - right_operand;
-                break;
-            case '*': // op가 '*' 이면 곱셈을 해요.
-                result = left_operand * right_operand;
-                break;
-            case '/': // op가 '/' 이면 나눗셈을 해요.
-                result = left_operand / right_operand;
-                break;
-            }
-            // 두 숫자를 연산한 결과를 다시 스택에 넣어요.
-            // 이 결과는 나중에 다른 연산에 사용될 수 있어요.
-            push(result);
-        }
-    }
-    // 모든 계산이 끝나면 스택에는 최종 결과값 하나만 남아있게 돼요.
-    // 그 최종 결과값을 꺼내서 반환해요.
-    return pop();
-}
-
-int main() {
-    int i = 0;
-    char t = 0;
-    char in[1000] = {0};
-    // char post[1000] = { 0 }; // 사용되지 않으므로 주석 처리하거나 삭제 가능
-
-    // input string (EOF는 Ctrl+Z 또는 Ctrl+D 로 입력)
-    while ((t = getchar()) != EOF)
-        in[i++] = t;
-    in[i] = '\0';
-
-    // output
-    printf("%d\n", eval(in));
+    // 변환된 결과를 화면에 출력합니다.
+    printf("%s\n", postfix_expr);
 
     return 0;
 }
